# ksp-browser

./: package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  renderer.rs
src-tauri/src/commands/: inspector.rs  mod.rs  navigation.rs  network.rs
src-tauri/src/events/: bus.rs  types.rs
src-tauri/src/extensions/: manifest.rs  mod.rs
src-tauri/src/inspector/: analyzer.rs  capture_buffer.rs  kspcap.rs  mod.rs  replay.rs
src-tauri/src/kernel/: mod.rs  scheduler.rs  session_restore.rs
src-tauri/src/loader/: mod.rs  resource_loader.rs
src-tauri/src/navigation/: context.rs  history.rs  mod.rs  normalizer.rs  parser.rs  permissions.rs  router.rs
src-tauri/src/network/: capabilities.rs  connection_manager.rs  gateway_client.rs  mod.rs
src-tauri/src/services/: gateway_service.rs  mod.rs  registry.rs  search_service.rs
src-tauri/src/storage/: db.rs
src-tauri/src/telemetry/: metrics.rs  mod.rs
src/components/: AddressBar.tsx  CommandPalette.tsx  TabBar.tsx  Viewport.tsx
src/components/ProtocolInspector/: ProtocolInspector.tsx
src/pages/: DownloadsPage.tsx  Home.tsx  NativeGateway.tsx  Onboarding.tsx  SettingsPage.tsx
src/store/: browserStore.ts  gatewayStore.ts  historyStore.ts  index.ts  inspectorStore.ts  networkStore.ts
src/utils/: address.ts
