[package]
name = "ksp-browser"
version = "0.1.0"
description = "KSP Browser — native desktop browser for the Kush Secure Protocol"
authors = ["Kush2272"]
edition = "2021"

[lib]
name = "ksp_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# KSP dependencies
ksp-core = { path = "../../ksp/crates/ksp-core" }
ksp-client = { path = "../../ksp/crates/ksp-client" }
